--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -108,13 +108,15 @@
             <section id="Om">
                 <h1 class="text-center display-1" style="color:white; margin-bottom:2vw">Om</h1>
                 <div class="wrapper_om col-md-10 col-md-push-1">
-                    <div class="box_om col-md-12" style="height:1000px; background-color:white;">
+                    <div class="box_om col-md-12" style="height:110%; background-color:white; margin-bottom:2vw; padding-bottom:2vw;">
 
                         <div class="box_om col-md-12" style="height:40px; background-color:#566b62; margin-top:2vw;"> </div>
 
-                        <h2 class="text-center" style="color:black; margin-top:6vw;"> <strong>Kontakt </strong> </h2>
-                        <h3 class="text-center" style="color:black"> <strong> Email: seb994@live.dk </strong></h3>
-                        <h3 class="text-center" style="color:black; margin-bottom:1vw;"> <strong> Telefon: +45 25 76 91 94 </strong></h3>
+                        <div class="kontaktinformation">
+                            <h2 class="text-center" style="color:black; margin-top:6vw;"> <strong>Kontakt </strong> </h2>
+                            <h3 class="text-center" style="color:black"> <strong> Email: seb994@live.dk </strong></h3>
+                            <h3 class="text-center" style="color:black; margin-bottom:1vw;"> <strong> Telefon: +45 25 76 91 94 </strong></h3>
+                        </div>
 
                         <div class="box_om col-md-12" style="height:40px; background-color:#566b62"> </div>
 
@@ -127,6 +129,69 @@
 
                         <div class="box_om col-md-12" style="height:40px; background-color:#566b62"> </div>
                         <h2 class="text-center" style="color:black; margin-top:5vw;"> <strong>CV</strong> </h2>
+                        <div class="unik">
+                            <h3 class="text-center">Hvad er det som gør mig unik?</h3>
+                            <p class="col-md-8 col-md-offset-4 col-md-pull-2" style="margin-bottom:2vw;">Jeg har gået I en kompetence klasse siden jeg var helt lille, hvor jeg fik besked at jeg nok ikke kunne gennemfører en folkeskole uddannelse og slet ikke en gymnasieuddannelse. Men fra helt lille har jeg været målbevidst (som nok kommer fra fodbolden), og ingen skulle fortælle mig hvad jeg ikke kunne. I dag har jeg en htx uddannelse og er startet på min drømmeuddannelse. Så det som gør mig unik er at jeg er en fighter som er målbevidst, stædig og udholdende og er derudover lærenem indenfor multimedie-verdenen.</p>
+                        </div>
+
+                        <div class="profil col-md-4">
+                            <div class="cirkel center-block" style="margin-bottom:2vw;">Profil </div>
+                            <h4 class="text-center" style="color:black;"><strong> Kompetencer </strong></h4>
+                            <p>Allerede I folkeskolen begyndte jeg at interessere mig for IT og Design hvor jeg eksperimenteret med design af forskellige ting og hvordan man kunne kode ved hjælp af html. På htx specialiserede jeg mig i kommunikation/IT & Design. Allerede der lærte jeg programmer såsom photoshop, dreamweaver osv. Derudover lærte jeg forskellige designteorier. Jeg ser mig selv som lidt af en “nørd” , da jeg er nysgerrig efter hele tiden at lære mere omkring html, css, javascript. Desuden synes jeg det er spændende at idegenerere på forskellige problemer & emner. En af mine store forcer er at jeg ikke giver så let op. f.eks. hvis jeg har et kodning problem, så vil jeg løse det før jeg gør noget andet. Jeg har været vant til at arbejde i grupper siden gymnasiet, så jeg er vant til at arbejde i teams. Dog er jeg også god til at arbejde selvstændigt. </p>
+
+                            <h4 class="text-center" style="color:black"><strong>Sprog</strong></h4>
+                            <ul>
+                                <li>Dansk</li>
+                                <li>Engelsk</li>
+                                <li>Html,Css & javascript</li>
+                            </ul>
+                        </div>
+
+                        <div class="uddannelse col-md-4">
+                            <div class="cirkel_udd center-block" style="margin-bottom:2vw;">Uddannelse </div>
+                            <h4 style="margin-bottom:0px;"><strong> Htx - komm/it & design </strong></h4>
+
+                            <p> Erhvervsskolen Nordsjælland
+                                <br>(2012-2015)
+                            </p>
+                            <br>
+
+                            <h4 style="margin-bottom:0px;"><strong> Engelsk A - Enkeltsfag </strong></h4>
+
+                            <p> Niels Brock GSK
+                                <br>(Oktober - December 2015)
+                            </p>
+                            <br>
+
+                            <h4><strong> PÅ MMD (KEA) har jeg arbejde med følgende</strong></h4>
+                            <ul style="list-style-type:disc">
+                                <li>Målgruppeanalyser</li>
+                                <li>html, css, Bootstrap og javascript</li>
+                                <li>Design Teorier</li>
+                                <li>Design Thinking</li>
+                                <li>Dramaturgi</li>
+                                <li>photoshop, illustrator, Indesign, Adobe XD</li>
+                                <li>Premiere Pro, After Effects & Audition</li>
+                                <li>Farveteori</li>
+                            </ul>
+
+
+
+                        </div>
+
+                        <div class="Erhvervserfaring col-md-4">
+                            <div class="cirkel_erhverv center-block" style="margin-bottom:2vw;">Erhvervserfaring</div>
+                            <h4 style="margin-bottom:0px;"><strong> Best Doctors - Praktikant </strong></h4>
+
+                            <p> Miami, USA (Januar - April 2016)</p>
+
+                            <br>
+                            <h4 style="margin-bottom:0px;"><strong> CollectorsHome - Webansvarlig </strong></h4>
+
+                            <p> (Marts 2017 - )</p>
+
+                            <img src="img/IT%20skills.png" alt="IT skills" class="img-responsive">
+                        </div>
 
                     </div>
                 </div>
@@ -138,7 +203,7 @@
     </div>
 
 
-
+    <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src=" https://code.jquery.com/jquery-3.1.1.min.js "></script>
     <script src="bootstrap/js/bootstrap.min.js "></script>
     <script src="js.js "></script>
