--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@MitFuckingValg!</title>
+    <title>Min Portfolio!</title>
     <link href="https://fonts.googleapis.com/css?family=Amiko" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
@@ -15,7 +15,7 @@
 
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
+        <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                     <span class="icon-bar"></span>
@@ -34,6 +34,23 @@
             </div>
         </div>
     </nav>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12 splashbillede">
+                <h1 class="typing_carousel">Velkommen, mit navn er Sebastian <br>
+                    <span
+                    class="txt-rotate"
+                    data-period="500"
+                    data-rotate='[ "Jeg designer hjemmesider.", "Jeg koder hjemmesider.", "Jeg bygger prototyper." ]'></span>
+                </h1>
+            </div>
+
+
+
+
+        </div>
+    </div>
 
 
     <h1 class="text-center display-1" style="color:white; margin-bottom:2vw"> Portfolio</h1>
@@ -198,10 +215,7 @@
 
             </section>
         </div>
-
-
     </div>
-
 
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src=" https://code.jquery.com/jquery-3.1.1.min.js "></script>
