effects on elements (scrollReveal)

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#Forside">Forside</a></li>
-                    <li><a href="#Portfolio">Portfolio</a></li>
+                    <li><a href="#Forside">Forside</a></li>
                     <li><a href="#Om">Om</a></li>
+                    <li><a href="#Portfolio">Portfolio</a></li>
                     <li><a href="#Kontakt">Kontakt</a></li>
                 </ul>
             </div>
@@ -53,7 +53,7 @@
     <div class="container">
         <section id="Om">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 hojre_om">
                     <h1 class="text-center display-1" style="color:white;"> Om mig</h1>
                     <h2 style="color:white">Jeg studerer som multimediedesigner på København Erhvervsakademi</h2>
                     <p style="color:white;">Når jeg ikke studere som multimediedesigner er jeg sammen med vennerne eller familien. Sport interesser mig meget, især fodbold og basketball. Sporten har gjort mig målbevidst og udholdende, som jeg har overført til mine studier.
@@ -86,7 +86,7 @@
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <img src="img/diagram2.png" alt="Diagram over front end og Designer" class="img-responsive">
+                    <img src="img/diagram2.png" alt="Diagram over front end og Designer" class="img-responsive diagram_overblik">
                 </div>
                 <div class="col-md-4">
                     <div class="hojre_design_diagram">
@@ -109,7 +109,7 @@
         <div class="row">
             <section id="Portfolio">
                 <!-- Række 1 -->
-                <div>
+                <div class="raekke_1">
                     <div class="col-md-3 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test" class="img-responsive portfolio_venstre runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
@@ -129,7 +129,7 @@
                 </div>
 
                 <!-- Række 2 -->
-                <div>
+                <div class="raekke_2">
                     <div class="col-md-3 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test" class="img-responsive portfolio_venstre runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
@@ -149,7 +149,7 @@
                 </div>
 
                 <!-- Række 3 -->
-                <div>
+                <div class="raekke_3">
                     <div class="col-md-3 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test" class="img-responsive portfolio_venstre runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
@@ -188,7 +188,7 @@
 
                         <div class="box_om col-md-12" style="height:40px; background-color:#566b62"> </div>
 
-                        <div class="Generelle oplysninger" style="margin-top:5vw;">
+                        <div class="Generelle_oplysninger" style="margin-top:5vw;">
                             <h3 class="text-center" style="color:black"> <strong> <em>Sebastian Storm </em> </strong></h3>
                             <h3 class="text-center" style="color:black; margin-top:0vw"> <strong> <em>Kea - Multimediedesigner</em> </strong></h3>
                             <h3 class="text-center" style="color:black; margin-top:0vw"> <strong> <em>Bopæl: Kokkedal </em> </strong></h3>
