Social media added to navbar, responsive (laptop, tablet and mobile) and affix navbar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -22,7 +22,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">WebSiteName</a>
+                <a class="navbar-brand" href="#Forside"> <img src="img/Asset%202.png" alt="Logo" style="width:40px;" class="logo_menubar"></a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
@@ -31,7 +31,18 @@
                     <li><a href="#Portfolio">Portfolio</a></li>
                     <li><a href="#Kontakt">Kontakt</a></li>
                 </ul>
+
+                <div class="nav navbar-nav navbar-right" id="myNavbar">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a target="_blank" href="https://www.linkedin.com/in/sebastian-storm-9344b7136/" class="linkedin"> <img src="img/linkedin.png" alt="Linkedin" style="width:40px;"></a>
+                        </li>
+
+                    </ul>
+                </div>
             </div>
+
+
         </div>
     </nav>
 
@@ -53,7 +64,7 @@
     <div class="container">
         <section id="Om">
             <div class="row">
-                <div class="col-md-6 hojre_om">
+                <div class="col-md-6 col-sm-6 col-xs-12 hojre_om">
                     <h1 class="text-center display-1" style="color:white;"> Om mig</h1>
                     <h2 style="color:white">Jeg studerer som multimediedesigner på København Erhvervsakademi</h2>
                     <p style="color:white;">Når jeg ikke studere som multimediedesigner er jeg sammen med vennerne eller familien. Sport interesser mig meget, især fodbold og basketball. Sporten har gjort mig målbevidst og udholdende, som jeg har overført til mine studier.
@@ -69,13 +80,13 @@
                         </blockquote>
                     </p>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-6 col-xs-12">
                     <img src="img/mig.jpg" alt="mig" class="img-responsive mig">
                 </div>
             </div>
 
             <div class="row" style="margin-top:5vw;">
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-4 col-xs-4">
                     <h2 style="color:white;">Front end Udvikler</h2>
                     <ul class="FrontEnd_Design_beskrivelse" style="color:white">
                         <li>Html</li>
@@ -85,10 +96,10 @@
                         <li>Vredesudbrud mod computer </li>
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-4 col-xs-4">
                     <img src="img/diagram2.png" alt="Diagram over front end og Designer" class="img-responsive diagram_overblik">
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-4 col-xs-4">
                     <div class="hojre_design_diagram">
                         <h2 style="color:white;">Designer</h2>
                         <ul class="FrontEnd_Design_beskrivelse" style="color:white">
@@ -110,19 +121,19 @@
             <section id="Portfolio">
                 <!-- Række 1 -->
                 <div class="raekke_1">
-                    <div class="col-md-3 portfolio_padding">
+                    <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test" class="img-responsive portfolio_venstre runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
                     </div>
-                    <div class="col-md-3 portfolio_padding">
+                    <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test2" class="img-responsive portfolio_venstremidt runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
                     </div>
-                    <div class="col-md-3 portfolio_padding">
+                    <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test3" class="img-responsive portfolio_hojremidt runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
                     </div>
-                    <div class="col-md-3 portfolio_padding">
+                    <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test4" class="img-responsive portfolio_hojre runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
                     </div>
@@ -130,19 +141,19 @@
 
                 <!-- Række 2 -->
                 <div class="raekke_2">
-                    <div class="col-md-3 portfolio_padding">
+                    <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test" class="img-responsive portfolio_venstre runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
                     </div>
-                    <div class="col-md-3 portfolio_padding">
+                    <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test2" class="img-responsive portfolio_venstremidt runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
                     </div>
-                    <div class="col-md-3 portfolio_padding">
+                    <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test3" class="img-responsive portfolio_hojremidt runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
                     </div>
-                    <div class="col-md-3 portfolio_padding">
+                    <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test4" class="img-responsive portfolio_hojre runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
                     </div>
@@ -150,19 +161,19 @@
 
                 <!-- Række 3 -->
                 <div class="raekke_3">
-                    <div class="col-md-3 portfolio_padding">
+                    <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test" class="img-responsive portfolio_venstre runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
                     </div>
-                    <div class="col-md-3 portfolio_padding">
+                    <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test2" class="img-responsive portfolio_venstremidt runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
                     </div>
-                    <div class="col-md-3 portfolio_padding">
+                    <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test3" class="img-responsive portfolio_hojremidt runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
                     </div>
-                    <div class="col-md-3 portfolio_padding">
+                    <div class="col-md-3 col-sm-3 col-xs-6 portfolio_padding">
                         <img src="img/teeeeeeest.PNG" alt="test4" class="img-responsive portfolio_hojre runde_kanter">
                         <h4 class="text-center titel_portfolio"> Titel</h4>
                     </div>
@@ -175,10 +186,10 @@
         <div class="row">
             <section id="Kontakt">
                 <h1 class="text-center display-1" style="color:white; margin-bottom:2vw">Kontakt</h1>
-                <div class="wrapper_om col-md-10 col-md-push-1">
-                    <div class="box_om col-md-12" style="height:110%; background-color:white; margin-bottom:2vw; padding-bottom:2vw;">
+                <div class="wrapper_om col-md-10 col-md-push-1 col-sm-10 col-sm-push-1">
+                    <div class="box_om col-md-12 col-sm-12" style="height:110%; background-color:white; margin-bottom:2vw; padding-bottom:2vw;">
 
-                        <div class="box_om col-md-12" style="height:40px; background-color:#566b62; margin-top:2vw;"> </div>
+                        <div class="box_om col-md-12 col-sm-12" style="height:40px; background-color:#566b62; margin-top:2vw;"> </div>
 
                         <div class="kontaktinformation">
                             <h2 class="text-center" style="color:black; margin-top:6vw;"> <strong>Kontakt </strong> </h2>
@@ -186,7 +197,7 @@
                             <h3 class="text-center" style="color:black; margin-bottom:1vw;"> <strong> Telefon: +45 25 76 91 94 </strong></h3>
                         </div>
 
-                        <div class="box_om col-md-12" style="height:40px; background-color:#566b62"> </div>
+                        <div class="box_om col-md-12 col-sm-12" style="height:40px; background-color:#566b62"> </div>
 
                         <div class="Generelle_oplysninger" style="margin-top:5vw;">
                             <h3 class="text-center" style="color:black"> <strong> <em>Sebastian Storm </em> </strong></h3>
@@ -195,14 +206,14 @@
                             <h3 class="text-center" style="color:black; margin-top:0vw"> <strong> <em>Alder: 23 år </em> </strong></h3>
                         </div>
 
-                        <div class="box_om col-md-12" style="height:40px; background-color:#566b62"> </div>
+                        <div class="box_om col-md-12 col-sm-12" style="height:40px; background-color:#566b62"> </div>
                         <h2 class="text-center" style="color:black; margin-top:5vw;"> <strong>CV</strong> </h2>
                         <div class="unik">
                             <h3 class="text-center">Hvad er det som gør mig unik?</h3>
-                            <p class="col-md-8 col-md-offset-4 col-md-pull-2" style="margin-bottom:2vw;">Jeg har gået I en kompetence klasse siden jeg var helt lille, hvor jeg fik besked at jeg nok ikke kunne gennemfører en folkeskole uddannelse og slet ikke en gymnasieuddannelse. Men fra helt lille har jeg været målbevidst (som nok kommer fra fodbolden), og ingen skulle fortælle mig hvad jeg ikke kunne. I dag har jeg en htx uddannelse og er startet på min drømmeuddannelse. Så det som gør mig unik er at jeg er en fighter som er målbevidst, stædig og udholdende og er derudover lærenem indenfor multimedie-verdenen.</p>
+                            <p class="col-md-8 col-md-offset-4 col-md-pull-2 col-sm-8 col-sm-offset-4 col-sm-pull-2" style="margin-bottom:2vw;">Jeg har gået I en kompetence klasse siden jeg var helt lille, hvor jeg fik besked at jeg nok ikke kunne gennemfører en folkeskole uddannelse og slet ikke en gymnasieuddannelse. Men fra helt lille har jeg været målbevidst (som nok kommer fra fodbolden), og ingen skulle fortælle mig hvad jeg ikke kunne. I dag har jeg en htx uddannelse og er startet på min drømmeuddannelse. Så det som gør mig unik er at jeg er en fighter som er målbevidst, stædig og udholdende og er derudover lærenem indenfor multimedie-verdenen.</p>
                         </div>
 
-                        <div class="profil col-md-4">
+                        <div class="profil col-md-4 col-sm-4">
                             <div class="cirkel center-block" style="margin-bottom:2vw;">Profil </div>
                             <h4 class="text-center" style="color:black;"><strong> Kompetencer </strong></h4>
                             <p>Allerede I folkeskolen begyndte jeg at interessere mig for IT og Design hvor jeg eksperimenteret med design af forskellige ting og hvordan man kunne kode ved hjælp af html. På htx specialiserede jeg mig i kommunikation/IT & Design. Allerede der lærte jeg programmer såsom photoshop, dreamweaver osv. Derudover lærte jeg forskellige designteorier. Jeg ser mig selv som lidt af en “nørd” , da jeg er nysgerrig efter hele tiden at lære mere omkring html, css, javascript. Desuden synes jeg det er spændende at idegenerere på forskellige problemer & emner. En af mine store forcer er at jeg ikke giver så let op. f.eks. hvis jeg har et kodning problem, så vil jeg løse det før jeg gør noget andet. Jeg har været vant til at arbejde i grupper siden gymnasiet, så jeg er vant til at arbejde i teams. Dog er jeg også god til at arbejde selvstændigt. </p>
@@ -215,7 +226,7 @@
                             </ul>
                         </div>
 
-                        <div class="uddannelse col-md-4">
+                        <div class="uddannelse col-md-4 col-sm-4">
                             <div class="cirkel_udd center-block" style="margin-bottom:2vw;">Uddannelse </div>
                             <h4 style="margin-bottom:0px;"><strong> Htx - komm/it & design </strong></h4>
 
@@ -247,7 +258,7 @@
 
                         </div>
 
-                        <div class="Erhvervserfaring col-md-4">
+                        <div class="Erhvervserfaring col-md-4 col-sm-4">
                             <div class="cirkel_erhverv center-block" style="margin-bottom:2vw;">Erhvervserfaring</div>
                             <h4 style="margin-bottom:0px;"><strong> Best Doctors - Praktikant </strong></h4>
 
