ferm living + verdenshjørnet undersider

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <br>
                         <br> Før jeg startede på MMD var jeg 3 måneder i Miami, USA hvor jeg var praktikant hos Best Doctors. Jeg arbejdede sammen med deres multimediedesigner hvor jeg fik lov til at komme med feedback og forbedringer til deres apps. Det en grænseoverskridende oplevelese at være væk fra de trygge ramme men jeg lærte en hel masse, ren teknisk, menneskeligt og hvordan kulturen er i USA, især hvilken kultur latinamerikanerne har
                         <br>
-                        <br> I Marts 2017 fik jeg muligheden for at lave en lille webshop for CollectorsHome. Jeg brugte CMS programmet Wordpress. At få muligheden for at lave en webshop har lært mig en masse om wordpress og hvordan det fungerer. Derudover har det givet mig en viden om SEO og hvilke handelsbetingelser en webshop skal overholde, som jeg ikke ville få på min uddannelse. I dag er jeg webansvarlig og har til ansvar til driften af hjemmeside.
+                        <br> I Marts 2017 fik jeg muligheden for at lave en lille webshop for <a target="_blank" href="https://www.collectorshome.dk/">CollectorsHome</a>. Jeg brugte CMS programmet Wordpress. At få muligheden for at lave en webshop har lært mig en masse om wordpress og hvordan det fungerer. Derudover har det givet mig en viden om SEO og hvilke handelsbetingelser en webshop skal overholde, som jeg ikke ville få på min uddannelse. I dag er jeg webansvarlig og har til ansvar til driften af hjemmeside.
                         <br>
                         <br>
                         <blockquote class="blockquote">
