--- a/kyoto.html
+++ b/kyoto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Min Portfolio!</title>
+    <title>Kyoto</title>
     <link href="https://fonts.googleapis.com/css?family=Amiko" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
